grammar.js
        source_file: $ => seq(optional($._gap), $._hoonTall, repeat(seq($._gap, $._hoonTall)), optional($._gap)),

        _hoonTall: $ => choice($._runeTall, $._hoonWide),
        _hoonWide: $ => choice(
            $._runeWide,
            $._value,
            $._irregularForms
        ),

        _specTall: $ => choice($._bucTall, $._specWide, $.cenhepTall, $.cenlusTall, seq("$;", $._gap, $._specTall),
        ),//TODO: add all cen runes
        _specWide: $ => choice(
            $.term,
            $.aura,
            $.typeUnion,
            prec.left(0, seq(choice($.parent, $.name), repeat(
                seq(":", choice($.parent, $.name, $.number, $.cell, $.stripFace))
            ))),// $.composeExpressions,
            alias(prec.left(0, seq(optional($._specWide), "=", $._specWide)), $.wrapFace),// $.wrapFace,
            $.mold,
            seq("[", $._specWide, repeat(seq($._space, $._specWide)), "]"), //$.cell
            $.normalize,
            $._bucWide,
            seq("$;", "(", $._specWide, ")"),
            $.gateCall, $.cenhepWide, $.cenlusWide,
            // $.wrapFace2,
            $.factoryGate,
        ),
        _skinTall: $ => choice($._specTall, $.addCell),
        _skinWide: $ => choice($._specWide, $.addCell),
        _termWide: $ => choice(
            $.name, $.term
        ),
        _studTall: $ => choice($._studWide),
        _studWide: $ => choice(
            $.name
        ),
        _lusTall: $ => choice(
            $.luslusTall,
            $.lusbucTall,
            $.lusbarTall,
        ),

        rune: $ => "感#)@!(",
        luslusTall: $ => seq(alias("++", $.rune), $._gap, $.name, $._gap, $._hoonTall),
        barbucTall: $ => seq(alias("|$", $.rune), $._gap, choice($.name, seq("[", $.name, repeat(seq($._gap, $.name)), "]")), $._gap, $._specTall),
        barcabTall: $ => seq(alias("|_", $.rune), $._gap, $._specTall, $._gap, choice($._lusTall, $.lustarTall), repeat(seq($._gap, $._lusTall)), $._gap, $.coreTerminator),
        barcolTall: $ => seq(alias("|:", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        barcenTall: $ => seq(alias("|%", $.rune), $._gap, $._lusTall, repeat(seq($._gap, $._lusTall)), $._gap, $.coreTerminator),
        bardotTall: $ => seq(alias("|.", $.rune), $._gap, $._hoonTall),
        barketTall: $ => seq(alias("|^", $.rune), $._gap, $._hoonTall, $._gap, $._lusTall, repeat(seq($._gap, $._lusTall)), $._gap, $.coreTerminator),
        barhepTall: $ => seq(alias("|-", $.rune), $._gap, $._hoonTall),
        barsigTall: $ => seq(alias("|~", $.rune), $._gap, $._specTall, $._gap, $._hoonTall),
        bartarTall: $ => seq(alias("|*", $.rune), $._gap, $._specTall, $._gap, $._hoonTall),
        bartisTall: $ => seq(alias("|=", $.rune), $._gap, $._specTall, $._gap, $._hoonTall),
        barpatTall: $ => seq(alias("|@", $.rune), $._gap, $._lusTall, repeat(seq($._gap, $._lusTall)), $._gap, $.coreTerminator),
        barwutTall: $ => seq(alias("|?", $.rune), $._gap, $._hoonTall),
        bucbarTall: $ => seq(alias("$|", $.rune), $._gap, $._specTall, $._gap, $._hoonTall),
        buccabTall: $ => seq(alias("$_", $.rune), $._gap, $._hoonTall),
        buccenTall: $ => seq(alias("$%", $.rune), $._gap, repeat1(seq($._specTall, $._gap)), $.seriesTerminator),
        bucgalTall: $ => seq(alias("$<", $.rune), $._gap, $._specTall, $._gap, $._specTall),
        bucgarTall: $ => seq(alias("$>", $.rune), $._gap, $._specTall, $._gap, $._specTall),
        buchepTall: $ => seq(alias("$-", $.rune), $._gap, $._specTall, $._gap, $._specTall),
        bucketTall: $ => seq(alias("$^", $.rune), $._gap, $._specTall, $._gap, $._specTall),
        buclusTall: $ => seq(alias(seq("$", "+"), $.rune), $._gap, $._studTall, $._gap, $._specTall),
        bucpamTall: $ => seq(alias("$&", $.rune), $._gap, $._specTall, $._gap, $._hoonTall),
        bucsigTall: $ => seq(alias("$~", $.rune), $._gap, $._hoonTall, $._gap, $._specTall),
        bucpatTall: $ => seq(alias("$@", $.rune), $._gap, $._specTall, $._gap, $._specTall),
        buctisTall: $ => seq(alias("$=", $.rune), $._gap, $._skinTall, $._gap, $._specTall),
        bucwutTall: $ => seq(alias("$?", $.rune), $._gap, repeat1(seq($._specTall, $._gap)), $.seriesTerminator),
        colhepTall: $ => seq(alias(":-", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        colcabTall: $ => seq(alias(":_", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        collusTall: $ => seq(alias(":+", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall, $._gap, $._hoonTall),
        colketTall: $ => seq(alias(":^", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall, $._gap, $._hoonTall, $._gap, $._hoonTall),
        coltarTall: $ => seq(alias(":*", $.rune), $._gap, repeat1(seq($._hoonTall, $._gap)), $.seriesTerminator),
        colsigTall: $ => seq(alias(":~", $.rune), $._gap, repeat1(seq($._hoonTall, $._gap)), $.seriesTerminator),
        dotketTall: $ => seq(alias(".^", $.rune), $._gap, $._specTall, $._gap, repeat1(seq($._hoonTall, $._gap)), $.seriesTerminator),
        dotlusTall: $ => seq(alias(".+", $.rune), $._gap, $._hoonTall),
        dottarTall: $ => seq(alias(".*", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        dottisTall: $ => seq(alias(".=", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        dotwutTall: $ => seq(alias(".?", $.rune), $._gap, $._hoonTall),
        ketbarTall: $ => seq(alias("^|", $.rune), $._gap, $._hoonTall),
        ketcolTall: $ => seq(alias("^:", $.rune), $._gap, $._specTall),
        ketdotTall: $ => seq(alias("^.", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        kethepTall: $ => seq(alias("^-", $.rune), $._gap, $._specTall, $._gap, $._hoonTall),
        ketlusTall: $ => seq(alias("^+", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        ketpamTall: $ => seq(alias("^&", $.rune), $._gap, $._hoonTall),
        ketsigTall: $ => seq(alias("^~", $.rune), $._gap, $._hoonTall),
        kettisTall: $ => seq(alias("^=", $.rune), $._gap, $._skinTall, $._gap, $._hoonTall),
        ketwutTall: $ => seq(alias("^?", $.rune), $._gap, $._hoonTall),
        barbucWide: $ => seq(alias("|$", $.rune), "(", choice($.name, seq("[", $._termWide, repeat(seq($._space, $._termWide)), "]")), $._space, $._specWide, ")"),
        barcolWide: $ => seq(alias("|:", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        bardotWide: $ => seq(alias("|.", $.rune), "(", $._hoonWide, ")"),
        barhepWide: $ => seq(alias("|-", $.rune), "(", $._hoonWide, ")"),
        barsigWide: $ => seq(alias("|~", $.rune), "(", $._specWide, $._space, $._hoonWide, ")"),
        bartarWide: $ => seq(alias("|*", $.rune), "(", $._specWide, $._space, $._hoonWide, ")"),
        bartisWide: $ => seq(alias("|=", $.rune), "(", $._specWide, $._space, $._hoonWide, ")"),
        barwutWide: $ => seq(alias("|?", $.rune), "(", $._hoonWide, ")"),
        bucbarWide: $ => seq(alias("$|", $.rune), "(", $._specWide, $._space, $._hoonWide, ")"),
        buccabWide: $ => seq(alias("$_", $.rune), "(", $._hoonWide, ")"),
        buccenWide: $ => seq(alias("$%", $.rune), "(", $._specWide, repeat(seq($._space, $._specWide)), ")"),
        bucgalWide: $ => seq(alias("$<", $.rune), "(", $._specWide, $._space, $._specWide, ")"),
        bucgarWide: $ => seq(alias("$>", $.rune), "(", $._specWide, $._space, $._specWide, ")"),
        buchepWide: $ => seq(alias("$-", $.rune), "(", $._specWide, $._space, $._specWide, ")"),
        bucketWide: $ => seq(alias("$^", $.rune), "(", $._specWide, $._space, $._specWide, ")"),
        buclusWide: $ => seq(alias(seq("$", "+"), $.rune), "(", $._studWide, $._space, $._specWide, ")"),
        bucpamWide: $ => seq(alias("$&", $.rune), "(", $._specWide, $._space, $._hoonWide, ")"),
        bucsigWide: $ => seq(alias("$~", $.rune), "(", $._hoonWide, $._space, $._specWide, ")"),
        bucpatWide: $ => seq(alias("$@", $.rune), "(", $._specWide, $._space, $._specWide, ")"),
        buctisWide: $ => seq(alias("$=", $.rune), "(", $._skinWide, $._space, $._specWide, ")"),
        bucwutWide: $ => seq(alias("$?", $.rune), "(", $._specWide, repeat(seq($._space, $._specWide)), ")"),
        colhepWide: $ => seq(alias(":-", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        colcabWide: $ => seq(alias(":_", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        collusWide: $ => seq(alias(":+", $.rune), "(", $._hoonWide, $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        colketWide: $ => seq(alias(":^", $.rune), "(", $._hoonWide, $._space, $._hoonWide, $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        coltarWide: $ => seq(alias(":*", $.rune), "(", $._hoonWide, repeat(seq($._space, $._hoonWide)), ")"),
        colsigWide: $ => seq(alias(":~", $.rune), "(", $._hoonWide, repeat(seq($._space, $._hoonWide)), ")"),
        dotketWide: $ => seq(alias(".^", $.rune), "(", $._specWide, repeat1(seq($._space, $._hoonWide)), ")"),
        dotlusWide: $ => seq(alias(".+", $.rune), "(", $._hoonWide, ")"),
        dottarWide: $ => seq(alias(".*", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        dottisWide: $ => seq(alias(".=", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        dotwutWide: $ => seq(alias(".?", $.rune), "(", $._hoonWide, ")"),
        ketbarWide: $ => seq(alias("^|", $.rune), "(", $._hoonWide, ")"),
        ketcolWide: $ => seq(alias("^:", $.rune), "(", $._specWide, ")"),
        ketdotWide: $ => seq(alias("^.", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        kethepWide: $ => seq(alias("^-", $.rune), "(", $._specWide, $._space, $._hoonWide, ")"),
        ketlusWide: $ => seq(alias("^+", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        ketpamWide: $ => seq(alias("^&", $.rune), "(", $._hoonWide, ")"),
        ketsigWide: $ => seq(alias("^~", $.rune), "(", $._hoonWide, ")"),
        kettisWide: $ => seq(alias("^=", $.rune), "(", $._skinWide, $._space, $._hoonWide, ")"),
        ketwutWide: $ => seq(alias("^?", $.rune), "(", $._hoonWide, ")"),
        name: $ => choice("$", /[a-zA-Z][a-zA-Z0-9-]*/),
        number: $ => prec.right(0, choice(
            seq(optional(choice("--", "-")), choice(
                seq(/[0-9]{1,3}/, repeat(seq(".", optional($._gap), /[0-9]{3}/))), //@ud
                seq(/0x[0-9a-fA-F]{1,4}/, repeat(seq(".", optional($._gap), /[0-9a-fA-F]{4}/))), //@ux
                seq(/0b[01]{1,4}/, repeat(seq(".", optional($._gap), /[01]{4}/))), //@ub
                /0i[0-9]+/, //@ui
                seq(/0v[0-9a-v]{1,5}/, repeat(seq(".", optional($._gap), /[0-9a-v]{5}/))), //@uv
                seq(/0w[0-9a-zA-Z-~]{1,5}/, repeat(seq(".", optional($._gap), /[0-9a-zA-Z-~]{5}/))) //@uw
            )
            ), seq(".", optional(choice("~", "~~", "~~~")), /[0-9]+(.[0-9]+)?/) //@rh,@rs,@rd,@rq
        )),
        boolean: $ => choice("&", "|", ".y", ".n"),
        term: $ => choice(seq("%", choice($.name, $.number, $.date, seq("'", /[^\n']*/, "'"), $.knot, "~", $.ipAddress, $.bitcoinAddress, $.boolean, $.unicode, $.phonemic))),
        aura: $ => /@[a-zA-Z]*/,
        _space: $ => " ",
        _gap: $ => alias(repeat1(/ +|\n/), $.Gap),
        cord: $ => choice(seq("'", /([^\n'\\]|\\\\|\\\'|\\\w{2,})*/, repeat(seq("\\", optional($._gap), "/", /([^\n'\\]|\\\\|\\\'|\\\w{2,})+/)), "'"), /\'\'\'\n(.|\n)+\n\'\'\'/),
        string: $ => choice($.tape, $.cord, $.knot),
